--- a/src/oandapy.ipynb
+++ b/src/oandapy.ipynb
@@ -8,7 +8,7 @@
     "#1.事前設定:oandapyのインストール, googlecolabのドライブマウント, setup_fxconn()\n",
     "#2.為替相場から値を取得:fetch_fxvalue()\n",
     "#3.データ成形し、特徴量抽出:calc_feat()\n",
-    "#4.モデル学習:train_model()\n",
+    "#4.モデル学習:build_model()\n",
     "#5.将来の為替変動予測:predict()\n",
     "#6.予測結果をもとに取引の戦略を立てる:build_strategy()\n",
     "#7.取引:transaction_with_strategy()"
@@ -16,22 +16,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-0799e0ff2841>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-0799e0ff2841>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    $ pip install git+https://github.com/oanda/oandapy.git\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/oanda/oandapy.git\n",
+      "  Cloning https://github.com/oanda/oandapy.git to c:\\users\\satoshi\\appdata\\local\\temp\\pip-req-build-kx_ol5_e\n",
+      "Requirement already satisfied (use --upgrade to upgrade): oandapy==0.1 from git+https://github.com/oanda/oandapy.git in c:\\users\\satoshi\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\n",
+      "Requirement already satisfied: requests in c:\\users\\satoshi\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from oandapy==0.1) (2.22.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\satoshi\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->oandapy==0.1) (2019.11.28)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\satoshi\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->oandapy==0.1) (3.0.4)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\satoshi\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->oandapy==0.1) (1.25.8)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\satoshi\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->oandapy==0.1) (2.8)\n",
+      "Building wheels for collected packages: oandapy\n",
+      "  Running setup.py bdist_wheel for oandapy: started\n",
+      "  Running setup.py bdist_wheel for oandapy: finished with status 'done'\n",
+      "  Stored in directory: C:\\Users\\satoshi\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-cerlsp6k\\wheels\\84\\33\\ea\\2d5dddc641a73a23c531dd327e6e743ccbad487a2ae6f38c30\n",
+      "Successfully built oandapy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using pip version 18.1, however version 20.0.2 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
    "source": [
     "#1.事前設定\n",
     "#oandapyインストール\n",
-    "pip install git+https://github.com/oanda/oandapy.git"
+    "! pip install git+https://github.com/oanda/oandapy.git"
    ]
   },
   {
@@ -47,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -171,73 +190,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>109.984</td>\n",
-       "      <td>109.971</td>\n",
+       "      <td>109.808</td>\n",
+       "      <td>109.795</td>\n",
        "      <td>True</td>\n",
-       "      <td>109.993</td>\n",
-       "      <td>109.983</td>\n",
-       "      <td>109.983</td>\n",
-       "      <td>109.971</td>\n",
-       "      <td>109.983</td>\n",
-       "      <td>109.971</td>\n",
-       "      <td>2020-01-21 18:15:00+09:00</td>\n",
-       "      <td>34</td>\n",
+       "      <td>109.823</td>\n",
+       "      <td>109.812</td>\n",
+       "      <td>109.808</td>\n",
+       "      <td>109.795</td>\n",
+       "      <td>109.820</td>\n",
+       "      <td>109.808</td>\n",
+       "      <td>2020-02-06 00:07:00+09:00</td>\n",
+       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>109.985</td>\n",
-       "      <td>109.974</td>\n",
+       "      <td>109.794</td>\n",
+       "      <td>109.782</td>\n",
        "      <td>True</td>\n",
-       "      <td>109.989</td>\n",
-       "      <td>109.977</td>\n",
-       "      <td>109.984</td>\n",
-       "      <td>109.972</td>\n",
-       "      <td>109.985</td>\n",
-       "      <td>109.973</td>\n",
-       "      <td>2020-01-21 18:16:00+09:00</td>\n",
-       "      <td>41</td>\n",
+       "      <td>109.809</td>\n",
+       "      <td>109.796</td>\n",
+       "      <td>109.788</td>\n",
+       "      <td>109.775</td>\n",
+       "      <td>109.809</td>\n",
+       "      <td>109.796</td>\n",
+       "      <td>2020-02-06 00:08:00+09:00</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>109.981</td>\n",
-       "      <td>109.968</td>\n",
+       "      <td>109.808</td>\n",
+       "      <td>109.796</td>\n",
        "      <td>True</td>\n",
-       "      <td>109.984</td>\n",
-       "      <td>109.972</td>\n",
-       "      <td>109.972</td>\n",
-       "      <td>109.960</td>\n",
-       "      <td>109.984</td>\n",
-       "      <td>109.972</td>\n",
-       "      <td>2020-01-21 18:17:00+09:00</td>\n",
-       "      <td>51</td>\n",
+       "      <td>109.808</td>\n",
+       "      <td>109.796</td>\n",
+       "      <td>109.794</td>\n",
+       "      <td>109.782</td>\n",
+       "      <td>109.795</td>\n",
+       "      <td>109.783</td>\n",
+       "      <td>2020-02-06 00:09:00+09:00</td>\n",
+       "      <td>78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>109.987</td>\n",
-       "      <td>109.975</td>\n",
+       "      <td>109.826</td>\n",
+       "      <td>109.814</td>\n",
        "      <td>True</td>\n",
-       "      <td>109.991</td>\n",
-       "      <td>109.979</td>\n",
-       "      <td>109.978</td>\n",
-       "      <td>109.966</td>\n",
-       "      <td>109.982</td>\n",
-       "      <td>109.970</td>\n",
-       "      <td>2020-01-21 18:18:00+09:00</td>\n",
-       "      <td>47</td>\n",
+       "      <td>109.827</td>\n",
+       "      <td>109.815</td>\n",
+       "      <td>109.797</td>\n",
+       "      <td>109.783</td>\n",
+       "      <td>109.810</td>\n",
+       "      <td>109.797</td>\n",
+       "      <td>2020-02-06 00:10:00+09:00</td>\n",
+       "      <td>118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>109.979</td>\n",
-       "      <td>109.967</td>\n",
+       "      <td>109.824</td>\n",
+       "      <td>109.813</td>\n",
        "      <td>True</td>\n",
-       "      <td>109.990</td>\n",
-       "      <td>109.977</td>\n",
-       "      <td>109.977</td>\n",
-       "      <td>109.966</td>\n",
-       "      <td>109.985</td>\n",
-       "      <td>109.974</td>\n",
-       "      <td>2020-01-21 18:19:00+09:00</td>\n",
-       "      <td>31</td>\n",
+       "      <td>109.839</td>\n",
+       "      <td>109.828</td>\n",
+       "      <td>109.822</td>\n",
+       "      <td>109.809</td>\n",
+       "      <td>109.828</td>\n",
+       "      <td>109.815</td>\n",
+       "      <td>2020-02-06 00:11:00+09:00</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -245,21 +264,21 @@
       ],
       "text/plain": [
        "   closeAsk  closeBid  complete  highAsk  highBid   lowAsk   lowBid  openAsk  \\\n",
-       "0   109.984   109.971      True  109.993  109.983  109.983  109.971  109.983   \n",
-       "1   109.985   109.974      True  109.989  109.977  109.984  109.972  109.985   \n",
-       "2   109.981   109.968      True  109.984  109.972  109.972  109.960  109.984   \n",
-       "3   109.987   109.975      True  109.991  109.979  109.978  109.966  109.982   \n",
-       "4   109.979   109.967      True  109.990  109.977  109.977  109.966  109.985   \n",
+       "0   109.808   109.795      True  109.823  109.812  109.808  109.795  109.820   \n",
+       "1   109.794   109.782      True  109.809  109.796  109.788  109.775  109.809   \n",
+       "2   109.808   109.796      True  109.808  109.796  109.794  109.782  109.795   \n",
+       "3   109.826   109.814      True  109.827  109.815  109.797  109.783  109.810   \n",
+       "4   109.824   109.813      True  109.839  109.828  109.822  109.809  109.828   \n",
        "\n",
        "   openBid                      time  volume  \n",
-       "0  109.971 2020-01-21 18:15:00+09:00      34  \n",
-       "1  109.973 2020-01-21 18:16:00+09:00      41  \n",
-       "2  109.972 2020-01-21 18:17:00+09:00      51  \n",
-       "3  109.970 2020-01-21 18:18:00+09:00      47  \n",
-       "4  109.974 2020-01-21 18:19:00+09:00      31  "
+       "0  109.808 2020-02-06 00:07:00+09:00      77  \n",
+       "1  109.796 2020-02-06 00:08:00+09:00     128  \n",
+       "2  109.783 2020-02-06 00:09:00+09:00      78  \n",
+       "3  109.797 2020-02-06 00:10:00+09:00     118  \n",
+       "4  109.815 2020-02-06 00:11:00+09:00      81  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -409,81 +430,113 @@
    ],
    "source": [
     "#4 モデル学習: train_model()\n",
-    "#TODO なんもやってない\n",
+    "\n",
+    "#TODO importはutil.pyにまとめる\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Activation, Dense,Bidirectional\n",
+    "from keras.layers import LSTM\n",
+    "from keras.layers import Dropout\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "tf.disable_v2_behavior()\n",
+    "\n",
+    "np.random.seed(202)\n",
     "\n",
     "\n",
-    "def build_model(inputs, output_size, neurons, activ_func=\"linear\",\n",
-    "                dropout=0.25, loss=\"mae\", optimizer=\"adam\"):\n",
-    "# モデル設定->ここを工夫\n",
+    "#モデルのハイパーパラメータ設定\n",
+    "#TODO もっとすっきり書きたい→csvとかに書いておいて、pd.read_csv()とするといい？\n",
+    "def set_model_param_dict():\n",
+    "    param_dict = dict()\n",
+    "    param_dict['activation']=\"relu\"\n",
+    "    param_dict['dropout']=0.25\n",
+    "    param_dict['loss']=\"mae\"\n",
+    "    param_dict['optimizer']=\"adam\"\n",
+    "    param_dict['num_LSTMcells']=248\n",
+    "    param_dict['recurrent_dropout']=0.3\n",
+    "\n",
+    "    param_dict['num_units_Dense1']=64\n",
+    "    param_dict['num_units_Dense2']=32\n",
+    "\n",
+    "    param_dict['epochs']=10\n",
+    "    param_dict['batch_size']=1\n",
+    "    param_dict['flag_shuffle_traindata']=True\n",
+    "\n",
+    "    return param_dict\n",
+    "\n",
+    "#出力データのサイズ抽出\n",
+    "def extract_output_size(output_arr):\n",
+    "    if output_arr.ndim == 1:\n",
+    "      output_size = 1\n",
+    "    else: \n",
+    "      output_size = output_arr.shape[1]\n",
+    "    \n",
+    "    return output_size\n",
+    "\n",
+    "#===========================================================\n",
+    "#モデルの定義\n",
+    "def define_model(X, y, param_dict):\n",
+    "    #TODO 変数名と同じ要素を取ってくるようにしたい：assign_param(model_params, given_params)\n",
+    "    #クラスとかをつかうとよい？\n",
+    "    #最も理想param_list=param_dict**からのnum_cellとかに値代入されている\n",
+    "    #ネットワーク構造を決定するパラメタ群は別の変数にしたい\n",
+    "    activation = param_dict['activation']\n",
+    "    dropout = param_dict['dropout']\n",
+    "    loss = param_dict['loss']\n",
+    "    optimizer = param_dict['optimizer']\n",
+    "    num_LSTMcells = param_dict['num_LSTMcells']\n",
+    "    recurrent_dropout = param_dict['recurrent_dropout']\n",
+    "    \n",
+    "    #shape[0]は特徴量ベクトルの数\n",
+    "    #shape[1]は時間方向のデータ数\n",
+    "    #shape[2]は他のなにか\n",
+    "    input_shape = (X.shape[1], X.shape[2])\n",
+    "\n",
+    "    num_units_Dense1 = param_dict['num_units_Dense1']\n",
+    "    num_units_Dense2 = param_dict['num_units_Dense2']\n",
+    "    num_dim_output = extract_output_size(y)\n",
+    "    #TODO 上記全部２つの関数にまとめたい：set_hyperparamer, extract_output_size\n",
+    "\n",
+    "\n",
+    "    #モデルの定義\n",
     "    model = Sequential()\n",
-    " \n",
-    "    model.add(LSTM(neurons, input_shape=(inputs.shape[1], inputs.shape[2])))\n",
+    "    model.add(Bidirectional(LSTM(num_LSTMcells, dropout=dropout,recurrent_dropout=recurrent_dropout,input_shape=input_shape)))\n",
+    "    model.add(Dense(num_units_Dense1,activation=activation))\n",
     "    model.add(Dropout(dropout))\n",
-    "    model.add(Dense(units=output_size))\n",
-    "    model.add(Activation(activ_func))\n",
+    "    model.add(Dense(num_units_Dense2,activation=activation))\n",
+    "    model.add(Dense(num_dim_output))\n",
     " \n",
     "    model.compile(loss=loss, optimizer=optimizer)\n",
     "    return model\n",
     "\n",
-    "#TODO: ランダムシードの設定->文頭に入れるべき\n",
-    "np.random.seed(202)\n",
-    " \n",
-    "# 初期モデルの構築\n",
+    "\n",
+    "\n",
+    "#モデル学習(一応historyも返すようにしている)\n",
+    "def train_model_with_history(defined_model, X_train, y_train, param_dict):\n",
+    "    epochs = param_dict['epochs']\n",
+    "    batch_size = param_dict['batch_size']\n",
+    "    flag_shuffle_traindata = param_dict['flag_shuffle_traindata'] \n",
+    "    \n",
+    "    history = defined_model.fit(X_train, y_train, epochs=epochs, batch_size=batch_size, verbose=1, shuffle=flag_shuffle_traindata)\n",
+    "    return model, history\n",
+    "\n",
+    "\n",
+    "\n",
+    "#メイン：モデルを定義、学習を行いファイルを生成\n",
+    "def build_model(X_train, y_train, param_dict):\n",
+    "    defined_model = define_model(X=X_train, y=y_train, param_dict=param_dict)\n",
+    "    model, history = train_model_with_history(defined_model=defined_model, X_train=X_train, y_train=y_train, param_dict=param_dict)\n",
+    "    return model #arbitrarily add -> history\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4 テスト\n",
     "X_train, y_train = X_dict['train'], y_dict['train']\n",
-    "#TODO LSTMのセルの数をneuronsという名前から変更すべき\n",
-    "#TODO ネットワークの設定を、別途configファイルかargs.parserで引数として外部設定できるようにする\n",
-    "model = build_model(X_train, output_size=1, neurons = 20)\n",
-    "history = model.fit(X_train, y_train, epochs=10, batch_size=1, verbose=2, shuffle=True)\n",
-    "\n",
-    "# #未来の値\n",
-    "#TODO: 何も変えていない\n",
-    "# empty = []\n",
-    "# future_array = np.array(empty)\n",
-    "# for i in range(length):\n",
-    "#     pred = (((np.transpose(yen_model.predict(latest_lstm_in))+1) * latest['open'].values[0])[0])[0]\n",
-    "#     future_array= np.append(future_array,pred)\n",
-    "#     data ={'open':[pred]}\n",
-    "#     df1 = pd.DataFrame(data)\n",
-    "#     latest =pd.concat([latest,df1],axis=0)\n",
-    "#     latest.index = range(0,window_len+1)\n",
-    "#     latest = latest.drop(0,axis=0)\n",
-    "#     latest_lstm_in =pd_to_np(latest_lstm_in)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#4テスト\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import oandapy\n",
-    "import configparser\n",
-    "import pytz\n",
-    "import datetime\n",
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Activation, Dense\n",
-    "from keras.layers import LSTM\n",
-    "from keras.layers import Dropout\n",
-    "\n",
-    "#main\n",
-    "def main():\n",
-    "    "
+    "param_dict = set_model_param_dict()\n",
+    "model = build_model(X_train, y_train, param_dict)"
    ]
   }
  ],
